# stm32-code-examples

./: CMakeLists.txt  README.md  stm32f100.ld
blinky/: CMakeLists.txt  main.c
c-examples/: CMakeLists.txt
c-examples/blinky/: main.c
c-examples/cmake/: stm32_toolchain.cmake
c-examples/gpio-examples/: CMakeLists.txt
c-examples/gpio-examples/ex-4-1-blinky/: CMakeLists.txt  main.c
c-examples/gpio-examples/ex-4-2-blink-w-button/: main.c
c-examples/gpio-examples/ex-4-3-blink-w-button-pull-down/: main.c
c-examples/gpio-examples/ex-4-4-blink-w-button-pull-up/: CMakeLists.txt  main.c
c-examples/hello-world/: CMakeLists.txt
c-examples/inc/: rcc-config.h  spi-config.h  st7735.h
c-examples/lib/: CMakeLists.txt  rcc-config.c  timer.c  uart-config.c
c-examples/spi-examples/st7735-lcd-graphics/: CMakeLists.txt
c-examples/spi-examples/st7735-lcd-text/: main.c
c-examples/uart-examples/: README.md
c-examples/uart-examples/ex-5-4-uart-echo-second/: main.c
c-examples/uart-examples/ex-5-5-uart-processor/: main.c
chapter04/: CMakeLists.txt  README.md
chapter04/ex-4-2-blink-w-button/: main.c
chapter04/exercise4-2-blink-w-button/: CMakeLists.txt
chapter04/exercise4-3-blink-w-button-pull-down/: main.c
chapter05/: CMakeLists.txt  README.md
chapter05/ex-5-1-uart-hello/: CMakeLists.txt  main.c  uart.c
chapter05/ex-5-2-uart-hello-parallel/: CMakeLists.txt  main.c
chapter05/ex-5-3-uart-echo/: CMakeLists.txt  main.c
chapter05/ex-5-4-uart-echo-second/: CMakeLists.txt  main.c
chapter05/ex-5-5-uart-processor/: CMakeLists.txt  ascii_processor.c  main.c  uart-processor.h
chapter05/ex-5-6-uart-text-command/: CMakeLists.txt  main.c
chapter05/uart-lib/: CMakeLists.txt  uart.c  uart.h
chapter06/: CMakeLists.txt
chapter06/spi-lookback/: CMakeLists.txt  main.c
chapter06/spi-loopback-16bits/: CMakeLists.txt  main.c
chapter06/spi-loopback-8bits/: main.c
cmake/: stm32_import.cmake
gpio-examples/ex-4-3-blink-w-button-pull-down/: CMakeLists.txt
gpio-examples/ex-4-4-blink-w-button-pull-up/: main.c
inc/: st7735.h  timer.h  uart-config.h
lib/: CMakeLists.txt  spi-config.c  st7735.c
lib/st7735/: CMakeLists.txt  glcdfont.h  st7735.c
rust-examples/: STM32F3-Projects.md  notes.md  study-guide.md
rust-examples/leds/blinky/: Cargo.toml  Commands.md
rust-examples/leds/blinky/.cargo/: config.toml
rust-examples/leds/blinky/scripts/: flash.sh
rust-examples/leds/blinky/src/: main.rs
spi-examples/: CMakeLists.txt
spi-examples/spi-loopback-16bits/: main.c
spi-examples/spi-loopback-8bits/: CMakeLists.txt  main.c
spi-examples/st7735-lcd/: CMakeLists.txt  ST7735.c  ST7735.h  main.c
spi-examples/st7735-lcd-graphics/: main.c
spi-examples/st7735-lcd-text/: CMakeLists.txt  main.c
uart-examples/ex-5-4-uart-echo-second/: CMakeLists.txt
uart-examples/ex-5-5-uart-processor/: ascii-processor.c  dummy-processor.c
